voeg download proces toe voor vodap catalog

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,4 +61,4 @@ workflows:
       - extract-vodap
       - create-artifact:
           requires:
-            - extract-codelists
+            - extract-catalog
