voeg download proces toe voor vodap catalog

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ workflows:
   version: 2
   generate_documentation:
     jobs:
-      - extract-vodap
+      - extract-catalog
       - create-artifact:
           requires:
             - extract-catalog
