--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             ~/project/scripts/download.sh https://opendata.vlaanderen.be/catalog.rdf?validation_mode=true /tmp/workspace/target/vodap.nt
       - run:
           name: cleanup all non-parseable triples
-          command: if rapper -i ntriples vodap.nt > test.nt ; then echo "no error found" ; else echo "ERRORS FOUND" ; fi 
+          command: if rapper -i ntriples vodap.nt > cleaned.nt ; then echo "no error found" ; else echo "ERRORS FOUND" ; fi 
       - run:
           name: gzip all files
           command: gzip /tmp/workspace/target/*
@@ -51,6 +51,7 @@ jobs:
           workdir: /tmp/workspace
           command: |
             cp -R target/vodap.nt.gz /tmp/generated/
+            cp -R target/cleaned.nt.gz /tmp/generated/
       - run:
           name: Push results to github
           workdir: /tmp/generated
