--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   extract-catalog:
     docker:
-      - image: cimg/node:node:18.0.0
+      - image: cimg/node:18.0.0
     steps:
       - checkout
       - run: sudo apt-get install -y raptor2-utils
@@ -26,7 +26,7 @@ jobs:
             - target/
   create-artifact:
     docker:
-      - image: cimg/node:node:18.0.0
+      - image: cimg/node:18.0.0
     steps:
       - checkout
       - attach_workspace:
