--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,11 @@ jobs:
       - image: cimg/node:18.0.0
     steps:
       - checkout
-      - run: sudo apt-get install -y raptor2-utils
+      - run: 
+          name: install raptor-utils
+          command: | 
+            sudo apt-get update -y 
+            sudo apt-get install -y raptor2-utils
       - run: mkdir -p /tmp/workspace/target
       - run:
           name: download-vodap
