--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: download-vodap
           command: |
-            ~/project/scripts/download.sh "https://beta.metadata.vlaanderen.be/srv/api/records?hitsPerPage=50&from=1&to=50&facet.q=isOpenData%2Fy" /tmp/workspace/target/vodap.nt
+            ~/project/scripts/download.sh "https://beta.metadata.vlaanderen.be/srv/api/records?facet.q=isOpenData%2Fy" /tmp/workspace/target/vodap.nt
       - run:
           name: cleanup all non-parseable triples
           command: if rapper -i ntriples /tmp/workspace/target/vodap.nt > /tmp/workspace/target/cleaned.nt ; then echo "no error found" ; else echo "ERRORS FOUND" ; fi 
