--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
       - run:
           name: download-vodap
           command: |
-            ~/project/scripts/download.sh "https://beta.metadata.vlaanderen.be/srv/api/records?facet.q=isOpenData%2Fy" /tmp/workspace/target/vodap.nt
+            ~/project/scripts/download_turtle.sh "https://beta.metadata.vlaanderen.be/srv/api/records?hitsPerPage=50&from=1&to=50" /tmp/workspace/target/vodap.ttl
       - run:
           name: cleanup all non-parseable triples
-          command: if rapper -i ntriples /tmp/workspace/target/vodap.nt > /tmp/workspace/target/cleaned.nt ; then echo "no error found" ; else echo "ERRORS FOUND" ; fi 
+          command: if rapper -i turtle /tmp/workspace/target/vodap.ttl > /tmp/workspace/target/cleaned.nt ; then echo "no error found" ; else echo "ERRORS FOUND" ; fi 
       - run:
           name: gzip all files
           command: gzip /tmp/workspace/target/*
